--- a/app/src/main/res/layout/activity_tlogin.xml
+++ b/app/src/main/res/layout/activity_tlogin.xml
@@ -147,11 +147,14 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginBottom="15dp"
-        android:text="Je suis TRADIPRATICIEN"
+        android:text="Je m'enregistre comme  TRADIPRATICIEN"
         android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/cardView"
-        tools:layout_editor_absoluteX="79dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
